--- a/package.json
+++ b/package.json
@@ -2,17 +2,11 @@
 	"name": "grace-shopper-funky-monkey",
 	"version": "1.1.0",
 	"description": "",
-	"main": "db.js",
+	"main": "index.js",
 	"dependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.5",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-2": "^6.24.1",
 		"express": "^4.16.4",
 		"react": "^16.8.3",
-		"react-dom": "^16.8.3",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.2.3"
+		"react-dom": "^16.8.3"
 	},
 	"babel": {
 		"presets": [
@@ -21,15 +15,27 @@
 		]
 	},
 	"devDependencies": {
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.5",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"eslint": "^5.16.0",
+		"eslint-config-prettier": "^4.2.0",
+		"eslint-plugin-prettier": "^3.0.1",
+		"eslint-plugin-react": "^7.12.4",
 		"morgan": "^1.9.1",
-		"nodemon": "^1.18.11"
+		"nodemon": "^1.18.11",
+		"prettier": "^1.17.0",
+		"webpack": "^4.29.6",
+		"webpack-cli": "^3.2.3"
 	},
 	"scripts": {
 		"start": "node server/index.js",
 		"postinstall": "npm run webpack",
-		"webpack": "webpack",
+		"webpack": "./node_modules/.bin/webpack",
 		"webpack:dev": "npm run webpack -- --mode=development --watch",
-		"start:dev": "npm run webpack:dev & DATABASE_URL=postgres://localhost/grace_shopper ./node_modules/.bin/nodemon server/index.js --ignore client/ --ignore public/"
+		"lint": "./node_modules/.bin/eslint .",
+		"start:dev": "npm run webpack:dev & npm run lint & DATABASE_URL=postgres://localhost/grace_shopper ./node_modules/.bin/nodemon server/index.js --ignore public/"
 	},
 	"keywords": [],
 	"author": "",
